<resources>
    <string name="app_name">Inventory App</string>
    <string name="err_bad_uri">"Insertion is not supported for "</string>
    <string name="add_product_title">Add Product</string>
    <string name="edit_product_title">Edit Product</string>
    <string name="add_product_photo">Update Photo</string>
    <string name="err_external_storage_permissions">Need permissions to get a product photo</string>
    <string name="action_delete_all_entries">Delete all Data</string>
    <string name="click_photo_to_update">Click to update product image.</string>
    <string name="product_name">Name of product</string>
    <string name="product_description">Short Description</string>
    <string name="set_product_sales">Sales products</string>
    <string name="set_inventory">In Stock</string>
    <string name="set_product_price">Price per unit</string>
    <string name="order_more">Order More</string>
    <string name="update">Update</string>
    <string name="save_product_label">Save Product</string>
    <string name="update_product_label">Update product</string>
    <string name="err_missing_textfields">Please complete all fields</string>
    <string name="err_inserting_product">Error inserting... try again</string>
    <string name="ok_updated">"Record updated successfully "</string>
    <string name="unsaved_changes_dialog_msg">You have unsaved information are you sure you want to go back?</string>
    <string name="discard">Discard and leave</string>
    <string name="keep_editing">Continue</string>
    <string name="editor_delete_product_failed">Problem deleting product</string>
    <string name="editor_delete_product_successful">Deleted successfully</string>
    <string name="delete_dialog_msg">Are you sure you want to delete the product</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="empty_list_hint">Click on + button to add new items</string>
    <string name="set_supplier">Suplier contact</string>
    <string name="need_name">Product must have name</string>
    <string name="need_price">Product must have valid price</string>
    <string name="delete_not_possible">Delete is not supported for</string>
    <string name="update_not_possible">Cannot update empty values</string>
    <string name="Unknown_URI">Unknown uri: </string>
</resources>
