<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/update_photo_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_photo_to_update"
            style="@style/details_title"/>

        <ImageView
            android:id="@+id/image_product_photo"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_insert_placeholder" />


        <TextView
            android:id="@+id/name_label"
            style="@style/details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name" />

        <EditText
            android:id="@+id/inventory_item_name_edittext"
            style="@style/details_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/product_name"
            android:inputType="textCapWords"
            android:maxLines="1"
            tools:text="Product Name" />

        <TextView
            style="@style/details_title"
            android:id="@+id/descriptionLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_description" />


        <EditText
            android:id="@+id/inventory_item_description_edittext"
            style="@style/details_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/product_description"
            android:inputType="textMultiLine"
            android:maxLength="30"
            android:maxLines="4"
            tools:text="@string/product_description" />


        <TextView
            style="@style/details_title"
            android:id="@+id/inventoryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_inventory" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/decrease_quantity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_remove_black_24dp" />

            <EditText
                android:id="@+id/inventory_item_current_quantity_edittext"
                style="@style/details_title"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/set_inventory"
                android:inputType="number"
                android:gravity="center"
                android:maxLines="1"
                android:text="0"
                tools:text="0"/>

            <ImageButton
                android:id="@+id/increase_quantity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_add_black_24dp" />

        </LinearLayout>

        <TextView
            style="@style/details_title"
            android:id="@+id/salesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_product_sales" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/decrease_quantity_sales"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_remove_black_24dp" />

            <EditText
                android:id="@+id/current_sales_edittext"
                style="@style/details_title"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/set_inventory"
                android:inputType="number"
                android:gravity="center"
                android:maxLines="1"
                android:text="0"
                tools:text="0"/>

            <ImageButton
                android:id="@+id/increase_quantity_sales"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_add_black_24dp" />

        </LinearLayout>


        <TextView
            style="@style/details_title"
            android:id="@+id/priceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_product_price" />


        <EditText
            android:id="@+id/inventory_item_price_edittext"
            style="@style/details_title"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/set_product_price"
            android:inputType="numberDecimal"
            android:text="0.00"
            tools:text="0.00" />

        <TextView
            style="@style/details_title"
            android:id="@+id/lable_supplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_supplier" />

        <EditText
            style="@style/details_title"
            android:id="@+id/suplier_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/set_supplier"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLines="1" />

        <TextView
            android:id="@+id/order_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_more"
            android:textAlignment="center" />

        <ImageButton
            android:id="@+id/order_supplier_button"
            android:src="@drawable/ic_contact_supplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/update_save_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update" />

        <ImageButton
            android:id="@+id/save_product_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_save_change"
            android:tint="@android:color/holo_green_dark"/>

        <TextView
            android:id="@+id/delete_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete Product"
            android:textAlignment="center" />

        <ImageButton
            android:id="@+id/delete_product_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete_product"
            android:tint="@android:color/holo_red_dark" />

    </LinearLayout>


</ScrollView>